@@ -2,7 +2,9 @@
 # Major Updates by Oozebull of Twisting Nether, Xenyr of Aszune, and Cybeloras of Mal'Ganis
 
 # Dont forget to toc bump TellMeWhen_Options too
+# Also dont forget to bump both of these - X-Interface is used to get the interface version in-game to check that the user is using a current client.
 ## Interface: 40200
+## X-Interface: 40200
 ## Title: TellMeWhen
 
 ## Version: 4.5.6
